完善4.1.1查询能力与安全边界